-
Bug
-
Resolution: Fixed
-
Minor
-
Lustre 2.14.0, Lustre 2.12.6
-
3
-
9223372036854775807
When a user runs "lfs changelog_clear <mdt> <id> <endrec>" and <endec> and below changelog entries have already been cleared, the MDT reports the following warning on the console:
Failure to clear the changelog for user <id>: -22
and when a user runs the same command for an <id> that does not exist, the MDT reports the following on the console:
No entry for user <id>
These don't represent a problem within Lustre and do not warrant a warning on the console.
- is related to
-
LU-15357 hash.c:1111:cfs_hash_destroy() ASSERTION( !cfs_hash_with_assert_empty(hs) ) failed: hash lu_site_osd-zfs bucket 1(8) is not empty: 1 items left
-
- Resolved
-